Add destructive action modal visualisation

--- a/client/src/app/button/button.component.html
+++ b/client/src/app/button/button.component.html
@@ -3,6 +3,7 @@
   [ngClass]="{
     'btn-primary': variant() === 'PRIMARY',
     'btn-secondary': variant() === 'SECONDARY',
+    'btn-destructive': variant() === 'DESTRUCTIVE',
   }"
 >
   {{ textContent() }}
