--- a/client/src/app/button/button.component.scss
+++ b/client/src/app/button/button.component.scss
@@ -24,3 +24,11 @@
 .btn-secondary:hover {
   background-color: #cfe7ff;
 }
+.btn-destructive {
+  background-color: #e63946;
+  color: #fff;
+}
+
+.btn-destructive:hover {
+  background-color: #d32f2f;
+}
