Implement provisoric account deletion in frontend

--- a/client/src/app/Pages/profile/profile.component.html
+++ b/client/src/app/Pages/profile/profile.component.html
@@ -74,6 +74,8 @@
             }
           }
         </div>
+        <app-icon-button [iconName]="IconName.Trash" (buttonClick)="handleAccountDeletion()" />
+        Account löschen
       </div>
     </div>
   </div>
