Add optional text property to app icon button

--- a/client/src/app/Pages/profile/profile.component.html
+++ b/client/src/app/Pages/profile/profile.component.html
@@ -74,8 +74,11 @@
             }
           }
         </div>
-        <app-icon-button [iconName]="IconName.Trash" (buttonClick)="handleAccountDeletion()" />
-        Account löschen
+        <app-icon-button
+          [iconName]="IconName.Trash"
+          [text]="'Account löschen'"
+          (buttonClick)="handleAccountDeletion()"
+        />
       </div>
     </div>
   </div>
