--- a/client/src/app/components/icon-button/icon-button.component.html
+++ b/client/src/app/components/icon-button/icon-button.component.html
@@ -1,3 +1,4 @@
 <button class="icon-button" [appTooltip]="tooltipTitle() ?? ''">
   <app-icon [name]="iconName()" [size]="15" />
+  {{ text() }}
 </button>
