--- a/client/src/app/components/icon-button/icon-button.component.scss
+++ b/client/src/app/components/icon-button/icon-button.component.scss
@@ -1,8 +1,10 @@
 //TODO: use colors of variables here
 
 .icon-button {
+  display: flex;
+  gap: 10px;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 0.9rem;
   line-height: 1.5;
   background-color: #f8f9fa;
   border: 1px solid #f8f9fa;
