Use normal block property in icon to fix layout

--- a/client/src/app/components/icon-button/icon-button.component.html
+++ b/client/src/app/components/icon-button/icon-button.component.html
@@ -1,4 +1,6 @@
 <button class="icon-button" [appTooltip]="tooltipTitle() ?? ''">
   <app-icon [name]="iconName()" [size]="15" />
-  {{ text() }}
+  <span>
+    {{ text() }}
+  </span>
 </button>
