--- a/client/src/app/components/icon-button/icon-button.component.scss
+++ b/client/src/app/components/icon-button/icon-button.component.scss
@@ -1,7 +1,6 @@
 //TODO: use colors of variables here
 
 .icon-button {
-  display: flex;
   gap: 10px;
   padding: 0.375rem 0.75rem;
   font-size: 0.9rem;
@@ -16,6 +15,10 @@
     background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out;
   box-shadow: none;
+
+  span {
+    margin-left: 0.35rem;
+  }
 
   &:hover {
     background-color: #e2e6ea;
