--- a/client/src/app/select/select.component.html
+++ b/client/src/app/select/select.component.html
@@ -1,9 +1,7 @@
-<select [name]="name()" (change)="onChange($event)" appInteractiveElement class="transparent-input">
-  @for (option of options(); track option) {
+<select [name]="name()" (change)="onChange($event)" class="transparent-input" appInteractiveElement>
+  @for (option of options(); track option; let index = $index) {
     <option [value]="option" [selected]="option === selectedValue()">
-      {{ option }}
+      {{ option | determineSelectOptionValue: optionLabels() : index }}
     </option>
-  } @empty {
-    <option>No Options Available</option>
   }
 </select>
