Implement basic reset password component

--- a/client/src/app/Pages/auth/login/login.component.html
+++ b/client/src/app/Pages/auth/login/login.component.html
@@ -26,7 +26,10 @@
         </span>
       </div>
       <div class="form-link">
-        <span>Forgot Password? <a href="#" class="forgot-pass">Click here </a></span>
+        <span
+          >Forgot Password?
+          <a href="/user/reset-password" (click)="navigateTo($event)" class="forgot-pass">Click here </a></span
+        >
       </div>
     </div>
     <div class="line"></div>
