--- a/client/src/app/Pages/auth/reset-password/reset-password.component.html
+++ b/client/src/app/Pages/auth/reset-password/reset-password.component.html
@@ -1,1 +1,22 @@
-<p>reset-password works!</p>
+<section class="container forms">
+  <div class="form login">
+    <div class="form-content">
+      <header>Passwort zurücksetzen</header>
+      <form (submit)="onSubmit($event)">
+        <div class="field input-field">
+          <input type="email" placeholder="Email" class="input" name="email" autocomplete="off" />
+        </div>
+
+        <div class="field button-field">
+          <button>Senden</button>
+        </div>
+      </form>
+      <div class="form-link">
+        <span>
+          Doch nicht vergessen?
+          <a href="/login" class="link signup-link" (click)="navigateTo($event)"> Signup </a>
+        </span>
+      </div>
+    </div>
+  </div>
+</section>
