Rename password reset request component

--- a/client/src/app/Pages/auth/request-new-password-email/request-new-password-email.component.html
+++ b/client/src/app/Pages/auth/request-new-password-email/request-new-password-email.component.html
@@ -2,9 +2,16 @@
   <div class="form login">
     <div class="form-content">
       <header>Passwort zurücksetzen</header>
-      <form (submit)="onSubmit($event)">
+      <form (submit)="requestPasswordResetMail($event)">
         <div class="field input-field">
-          <input type="email" placeholder="Email" class="input" name="email" autocomplete="off" />
+          <input
+            type="email"
+            placeholder="Email"
+            class="input"
+            name="email"
+            [value]="email()"
+            (input)="onEmailChange($event)"
+          />
         </div>
 
         <div class="field button-field">
