--- a/client/src/app/components/training-plan-card/training-plan-card.component.html
+++ b/client/src/app/components/training-plan-card/training-plan-card.component.html
@@ -6,7 +6,7 @@
     }"
   ></div>
   <div class="card-custom-avatar">
-    <img class="img-fluid" [src]="trainingPlan.pictureUrl" alt="Avatar" />
+    <img class="img-fluid" [src]="trainingPlan.pictureUrl ?? '/images/profile-placeholder.webp'" alt="Avatar" />
   </div>
   <div class="card-body" style="overflow-y: auto">
     <h4 class="card-title">{{ trainingPlan.title }}</h4>
