--- a/client/src/app/Pages/auth/login/login.component.html
+++ b/client/src/app/Pages/auth/login/login.component.html
@@ -4,7 +4,7 @@
       <header>Login</header>
       <form (submit)="onSubmit($event)">
         <div class="field input-field">
-          <input type="email" placeholder="Email" class="input" name="email" autocomplete="off" />
+          <input type="email" placeholder="Email" class="input" name="email" />
         </div>
         <div class="field input-field">
           <input autocomplete="off" type="password" placeholder="Password" class="password" name="password" />
