--- a/client/src/app/Pages/auth/reset-password/reset-password.component.html
+++ b/client/src/app/Pages/auth/reset-password/reset-password.component.html
@@ -2,9 +2,15 @@
   <div class="form login">
     <div class="form-content">
       <header>Passwort zurücksetzen</header>
-      <form (submit)="setNewPassword($event)">
+      <form (submit)="resetPassword($event)">
         <div class="field input-field">
-          <input type="password" placeholder="Create password" name="password" class="password" />
+          <input
+            type="password"
+            placeholder="Create password"
+            name="password"
+            class="password"
+            (input)="onPasswordChange($event)"
+          />
           @if (hidePasswordInput()) {
             <app-icon class="eye-icon" [name]="IconName.EYE_OFF" (click)="togglePasswordVisibility($event)" />
           } @else {
@@ -17,6 +23,7 @@
             placeholder="Confirm password"
             name="confirmPassword"
             class="password repeat-password"
+            (input)="onRepeatPasswordChange($event)"
           />
           @if (hideRepeatPasswordInput()) {
             <app-icon class="eye-icon" [name]="IconName.EYE_OFF" (click)="togglePasswordVisibility($event)" />
