Use new input component in exercise page

--- a/client/src/app/Pages/exercises/exercises.component.html
+++ b/client/src/app/Pages/exercises/exercises.component.html
@@ -17,14 +17,20 @@
               ) {
                 <tr>
                   <td [attr.data-cell]="category">
-                    <input
+                    <app-input
+                      [type]="'text'"
+                      [name]="categoryIndex + '_' + exerciseIndex + '_exercise'"
+                      [value]="exercise ?? ''"
+                      [alignText]="'left'"
+                    />
+                    <!-- <input
                       type="text"
                       class="transparent-input"
                       appInteractiveElement
                       [name]="categoryIndex + '_' + exerciseIndex + '_exercise'"
                       [value]="exercise || ''"
                       style="text-align: left; padding: 0"
-                    />
+                    /> -->
                   </td>
                 </tr>
               }
