Use generic type for input component

--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -82,6 +82,13 @@
               }
             </td>
             <td data-cell="Sets">
+              <!-- <app-input
+              [type]="'text'"
+              [name]="categoryIndex + '_' + exerciseIndex + '_exercise'"
+              [value]="exercise ?? ''"
+              [alignText]="'left'"
+            /> -->
+
               <input
                 type="number"
                 appInteractiveElement
