Fix unaligned icons

--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -93,6 +93,7 @@
               <app-input class="reps" [type]="'number'" [name]="namePrefix + 'reps'" [value]="exercise.reps" />
             </td>
             <td data-cell="Weight">
+              <!-- TODO: weight input noch austauschen-->
               <input
                 weightInput
                 [id]="namePrefix + 'weight'"
