--- a/client/src/app/input/input.component.html
+++ b/client/src/app/input/input.component.html
@@ -3,6 +3,7 @@
   class="transparent-input"
   appInteractiveElement
   [name]="name()"
+  [placeholder]="placeholder()"
   [value]="value()"
   [ngStyle]="{ 'text-align: left; padding: 0': alignText() === 'left' }"
 />
