Use input directive for actual rpe

--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -111,6 +111,7 @@
                 class="targetRPE"
                 [type]="'text'"
                 [name]="namePrefix + 'targetRPE'"
+                [directiveUsed]="'rpeInputDirective'"
                 [value]="exercise.targetRPE"
               />
             </td>
