Made est max service more robust

--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -115,7 +115,7 @@
                 [value]="exercise.targetRPE"
               />
             </td>
-            <td class="actual-rpe-data-cell" data-cell="@RPE">
+            <td data-cell="@RPE">
               <app-input
                 class="actualRPE"
                 [type]="'text'"
