--- a/client/src/app/input/input.component.html
+++ b/client/src/app/input/input.component.html
@@ -10,6 +10,7 @@
       [ngClass]="{
         'text-left': mobileDetectionService.isMobileDevice,
         'text-center': !mobileDetectionService.isMobileDevice && alignText() === 'center',
+        'opacity-0': type() === 'number' && value() === undefined,
       }"
     />
   }
