--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -61,19 +61,13 @@
             </td>
             <td data-cell="Exercise">
               @for (category of exerciseData.exerciseCategories; track category) {
-                <select
-                  appInteractiveElement
+                <app-dropdown
                   name="day{{ trainingDayIndex }}_exercise{{ k }}_exercise_name"
-                  class="exercise-name-selector transparent-input"
-                  [disabled]="exercise.category !== category"
+                  class="exercise-name-selector"
+                  [options]="exerciseData.categorizedExercises[category]"
+                  [selectedValue]="exercise.exercise"
                   [style.display]="exercise.category === category ? 'block' : 'none'"
-                >
-                  @for (exerciseName of exerciseData.categorizedExercises[category]; track exerciseName) {
-                    <option [value]="exerciseName" [selected]="exercise.exercise === exerciseName">
-                      {{ exerciseName }}
-                    </option>
-                  }
-                </select>
+                />
               }
             </td>
             <td data-cell="Sets">
