--- a/client/src/app/shared/components/multi-select/multi-select.component.scss
+++ b/client/src/app/shared/components/multi-select/multi-select.component.scss
@@ -1,5 +1,3 @@
-@import 'client/src/css/variables';
-
 .dropdown {
   width: 100%;
   max-width: 100%;
@@ -14,7 +12,7 @@
   max-width: 100%;
 
   & .chip {
-    background: $light-grey;
+    background: var(--light-grey);
   }
 }
 .dropdown button {
