--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-@import './css/tooltip.scss';
-
+@import './app//shared/directives/tooltip.scss';
 :root {
   --accent-color: #a78bfa;
 
