Fix training view

--- a/client/src/app/shared/components/multi-select/multi-select.component.html
+++ b/client/src/app/shared/components/multi-select/multi-select.component.html
@@ -6,9 +6,7 @@
       }
     </div>
     <div>
-      @if (isLoading()) {
-        <app-multi-select-spinner />
-      } @else if (isOpen()) {
+      @if (isOpen()) {
         <app-icon [name]="IconName.ChevronUp" />
       } @else {
         <app-icon [name]="IconName.ChevronDown" />
