Only display one select and remove now unneeded logic from directive

--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -60,15 +60,12 @@
               />
             </td>
             <td data-cell="Exercise">
-              @for (category of exerciseData.exerciseCategories; track category) {
-                <app-dropdown
-                  name="day{{ trainingDayIndex }}_exercise{{ k }}_exercise_name"
-                  class="exercise-name-selector"
-                  [options]="exerciseData.categorizedExercises[category]"
-                  [selectedValue]="exercise.exercise"
-                  [style.display]="exercise.category === category ? 'block' : 'none'"
-                />
-              }
+              <app-dropdown
+                name="day{{ trainingDayIndex }}_exercise{{ k }}_exercise_name"
+                class="exercise-name-selector"
+                [options]="exerciseData.categorizedExercises[exercise.category]"
+                [(selectedValue)]="exercise.exercise"
+              />
             </td>
             <td data-cell="Sets">
               <app-input
