--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -30,7 +30,7 @@
       <tbody>
         @for (k of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; track k; let i = $index) {
           @let exercise =
-            trainingPlanData.trainingDay.exercises![i] || {
+            trainingDataService.trainingPlanData.trainingDay.exercises![i] || {
               category: '',
               exercise: '',
               sets: '',
@@ -41,7 +41,7 @@
               estMax: '',
             };
           @let previousTrainingDayExercise =
-            trainingPlanData.previousTrainingDay?.exercises?.[i] ?? {
+            trainingDataService.trainingPlanData.previousTrainingDay?.exercises?.[i] ?? {
               exercise: undefined,
               weight: undefined,
             };
