--- a/client/src/app/components/mobile-nav/mobile-nav.component.html
+++ b/client/src/app/components/mobile-nav/mobile-nav.component.html
@@ -1,21 +1,14 @@
-<div class="nav-item">
-  <app-icon [name]="IconName.BookOpen" color="#6c757d" [size]="26" />
-  <span class="nav-label active">Home</span>
+<div class="nav-item" (click)="setActive('home')" [class.active]="activeItem === 'home'">
+  <app-icon [name]="IconName.HOME" [color]="activeItem === 'home' ? '#007bff' : '#6c757d'" [size]="26" />
+  <span class="nav-label">Home</span>
 </div>
-<div class="nav-item">
-  <app-icon [name]="IconName.BookOpen" color="#6c757d" [size]="26" />
-  <span class="nav-label">Search</span>
+
+<div class="nav-item" (click)="setActive('statistics')" [class.active]="activeItem === 'statistics'">
+  <app-icon [name]="IconName.BAR_CHART" [color]="activeItem === 'statistics' ? '#007bff' : '#6c757d'" [size]="26" />
+  <span class="nav-label">Statistiken</span>
 </div>
-<div class="nav-item central">
-  <div class="central-icon">
-    <app-icon name="zap" [size]="26" color="white" />
-  </div>
-</div>
-<div class="nav-item">
-  <app-icon name="bell" [size]="26" color="#6c757d" />
-  <span class="nav-label">Messages</span>
-</div>
-<div class="nav-item">
-  <app-icon [name]="IconName.User" color="#6c757d" [size]="26" />
-  <span class="nav-label">Profile</span>
+
+<div class="nav-item" (click)="setActive('profile')" [class.active]="activeItem === 'profile'">
+  <app-icon [name]="IconName.User" [color]="activeItem === 'profile' ? '#007bff' : '#6c757d'" [size]="26" />
+  <span class="nav-label">Profil</span>
 </div>
