--- a/client/src/app/components/mobile-nav/mobile-nav.component.scss
+++ b/client/src/app/components/mobile-nav/mobile-nav.component.scss
@@ -2,17 +2,15 @@
   position: fixed;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 20px;
-  width: 95%;
-  max-width: 600px;
-  height: 70px;
+  bottom: 0;
+  width: 100%;
+  height: 80px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 0.75rem;
   background-color: white;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  border-radius: 25px;
   z-index: 1000;
 }
 
@@ -34,7 +32,7 @@
 }
 
 .nav-item.active .nav-label {
-  color: #e91e63; /* Farbe für aktives Label */
+  color: #007bff;
   font-weight: bold;
 }
 
