--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -97,6 +97,14 @@
     @case (IconName.PLAY) {
       <polygon points="5 3 19 12 5 21 5 3"></polygon>
     }
+    @case (IconName.HOME) {
+      <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+      <polyline points="9 22 9 12 15 12 15 22"></polyline>
+    }
+
+    @case (IconName.CHEVRON_LEFT) {
+      <polyline points="15 18 9 12 15 6"></polyline>
+    }
 
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
